# RepoLens

./: .gitignore
backend/: main.py  pyproject.toml
backend/app/agents/: graph.py
backend/app/api/: ask.py  query.py  repos.py  scan.py
backend/app/core/: ignore.py
backend/app/models/: chat_model.py
backend/app/services/: chat_service.py  dependency_extractor.py  lazy_emberdder.py  repo_cloner.py  repo_scanner.py  vector_store.py
frontend/: package-lock.json  package.json
frontend/app/: page.jsx
frontend/lib/: api.js
